kubernetes-manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service
spec:
  type: LoadBalancer
  selector:
    app: sarva-portfolio
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
