kubernetes-manifest/gateway_api.yaml
# build on problem of cluttered nature of Igress, its CRD, Every Provider has its own Gateway class, 
# it Supports, TCP,UDP, HTTP, HTTPS, GRPC, L4 & L7 Traffic, It will do Header matching as well as manipulating , Traffic Weighting, Mirroring.
# gateway Classess - in easy terms its abstrcting LB configurition - you are deploying LB that's it


# Security can be implemented at every stage of Gateway API
# Gateway Class - CRD ( Providers ) --->                               should Be install first w.r.t Cloud Provider 
# Gateway ( how LB will listen traffic ) ( Listener rules ) --->       Configure via Yaml
# HTTP Route ( Route )                                                 Configure via Yaml

# step1:  https://www.gateway-api-controller.eks.aws.dev/latest/guides/getstarted/

# Step2: Gateway
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: portfolio-gateway
spec:
  gatewayClassName: example-class #have to look for AWS itself
  listeners:
  - name: http
    protocol: HTTP
    port: 80
# Step3 : HTTP Route
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: portfolio-httproute
spec:
  parentRefs:
  - name: portfolio-gateway # Here we mention Gateway Info 
  hostnames:
  - "sarvadnya.tech"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: portfolio-service
      port: 80
